# SDStore

./: CMakeLists.txt  Makefile
include/: aux.h  filtros.h  queue.h  request.h  sdstored.h
src/: aux.c  filtros.c  queue.c  request.c  sdstore.c  sdstored.c  transformacoes.c
